[gd_scene load_steps=5 format=2]

[ext_resource path="res://Autoload/SoundManager.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Play1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayer2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ -80.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Play2"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayer1:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ -80.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayer1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MusicPlayer2:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MusicPlayer2:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MusicPlayer1:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}

[node name="SoundManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicPlayer1" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = "Music"

[node name="MusicPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -80.0
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="OptionButton" type="OptionButton" parent="CanvasLayer"]
margin_left = 1021.0
margin_top = 11.0
margin_right = 1122.0
margin_bottom = 64.0
focus_mode = 0
enabled_focus_mode = 0

[node name="DJ" type="AnimationPlayer" parent="."]
anims/Play1 = SubResource( 1 )
anims/Play2 = SubResource( 3 )
anims/RESET = SubResource( 2 )

[connection signal="item_selected" from="CanvasLayer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="animation_finished" from="DJ" to="." method="_on_DJ_animation_finished"]
